# spacebar-emftillweb

./: .editorconfig  .flake8  .gitignore  README.md  package.json  pyproject.toml
emf/: api.py  api_objects.py  display.py  kiosk.py  middleware.py  models.py  order_client.py  urls.py  views.py
emf/management/commands/: expire_kiosk_orders.py  redis2mqtt.py  till2redis.py
emf/migrations/: 0001_initial.py  0002_alter_page_content.py  0003_kioskorderref.py  0004_remove_kioskorderref.py
emf/static/emf/: tapboard-manifest.json
emf/static/emf/fonts/: fonts.css
emf/static/emf/js/: clock.js  display.js  hidecursor.js  tapboard.js  tillwebclient.js
emf/static/emf/scss/: barboard.scss  colours.scss  display.scss  fonts.scss  style.scss  tapboard.scss  whatson.scss
emf/templates/emf/: ales.html  barboard.html  base.html  cellarboard.html  charts.html  display-bar-fun-facts.html  display-club-mate.html  display-on-tap.html  display-progress.html  display-sessions.html  display-spirits-and-mixers.html  display-wines-and-spirits.html  display-wines.html  display.html  jontyfacts.html  ontap-lines.html  page.html  pricelist.html  product.html  stocktypes.html  tapboard-sw.js  tapboard.html  tillprofile.html  whatson.html
tests/: test_order_client.py
tillweb/config/: conffile.py  oidc.py  settings.py  settings_production.py  urls.py
